# simple-tftpd

./: .gitignore  BUILD_STATUS.md  CMakeLists.txt  DOCUMENTATION_SUMMARY.md  Jenkinsfile  LICENSE  Makefile  README.md  README.txt  REFACTORING_PLAN.md  ROADMAP.md  ROADMAP_CHECKLIST.md  SOURCE_STRUCTURE_PROPOSAL.md  WELCOME.txt  simple-tftpd.code-workspace
automation/: README.md
automation/ansible/: inventory-vmware.ini  inventory.ini  playbook-build.yml  playbook.yml  requirements.yml
automation/ansible/scripts/: build.sh  collect-packages.sh  organize-packages.sh  remote-build.sh  setup-remote.sh  vm-build  vm-test
automation/ansible/templates/: .gitkeep
automation/ci/: .travis.yml  Jenkinsfile
automation/docker/: Dockerfile
automation/docker/examples/: README.md  docker-compose.yml
automation/vagrant/: Vagrantfile
cmake/: Info.plist.in  simple-tftpd-config.cmake.in
config/: simple-tftpd.conf.example
config/examples/: README.md
config/examples/advanced/: high_performance.conf.example  high_performance.ini.example  high_performance.json.example  high_performance.yaml.example  multi_tenant.conf.example  multi_tenant.ini.example  multi_tenant.json.example  multi_tenant.yaml.example  secure_server.conf.example  secure_server.ini.example  secure_server.json.example  secure_server.yaml.example
config/examples/production/: enterprise.ini.example  enterprise.json.example  enterprise.yaml.example  firmware_distribution.ini.example  firmware_distribution.json.example  firmware_distribution.yaml.example  high_availability.ini.example  high_availability.json.example  high_availability.yaml.example
config/examples/simple/: basic_server.conf.example  basic_server.ini.example  basic_server.json.example  basic_server.yaml.example  development.conf.example  development.ini.example  development.json.example  development.yaml.example  read_only.conf.example  read_only.ini.example  read_only.json.example  read_only.yaml.example
deployment/: README.md
deployment/examples/simple/: README.md
deployment/launchd/: com.simple-tftpd.simple-tftpd.plist  com.simpledaemons.simple-tftpd.plist  com.{{PROJECT_ORG}}.{{PROJECT_NAME}}.plist
deployment/logrotate.d/: {{PROJECT_NAME}}
deployment/scripts/: install.sh
deployment/systemd/: simple-tftpd.service
deployment/windows/: {{PROJECT_NAME}}.service
docs/: MEMORY_LEAK_DETECTION.md  PERFORMANCE_TESTING.md  PRODUCTION_DEPLOYMENT.md  README.md  ROADMAP.md  TROUBLESHOOTING.md
docs/configuration/: README.md
docs/datacenter/: README.md  cloud.md  configuration.md  deployment.md  installation.md  multi-site.md  performance.md  plugins.md  scaling.md
docs/development/: BUILD_GUIDE.md  README.md  SETUP.md
docs/diagrams/: deployment.md  security.md
docs/enterprise/: README.md  configuration.md  deployment.md  high-availability.md  installation.md  integrations.md  management.md  operations.md  performance.md  security.md
docs/installation/: README.md
docs/production/: README.md  configuration.md  deployment.md  installation.md  operations.md  performance.md  security.md
docs/shared/: LICENSING_STRATEGY.md
docs/shared/deployment/: backup-procedures.md  docker.md  maintenance-procedures.md  monitoring.md
docs/shared/diagrams/: README.md  architecture.md  data-flow.md  deployment.md  flow.md
docs/shared/examples/: README.md
docs/shared/getting-started/: README.md  first-steps.md  quick-start.md
docs/shared/project/: PHASE2_COMPLETION.md  ROADMAP.md
docs/shared/troubleshooting/: debugging.md  performance.md
docs/shared/user-guide/: security-best-practices.md
docs/user-guide/: README.md
include/simple-tftpd/config/: config.hpp
include/simple-tftpd/core/: connection.hpp  monitoring.hpp  packet.hpp  server.hpp
include/simple-tftpd/core/config/: config.hpp
include/simple-tftpd/core/tftp/: connection.hpp  monitoring.hpp  packet.hpp  server.hpp
include/simple-tftpd/datacenter/: README.md
include/simple-tftpd/enterprise/: README.md
include/simple-tftpd/production/security/: manager.hpp
include/simple-tftpd/utils/: logger.hpp
include/simple_tftpd/: logger.hpp  platform.hpp  tftp_config.hpp  tftp_connection.hpp  tftp_packet.hpp  tftp_server.hpp
main/: datacenter.cpp  enterprise.cpp  production.cpp
packaging/: CMakeLists.cpack
packaging/assets/: conclusion.html  readme.html  welcome.html
packaging/linux/deb/: control  postinst  postrm  prerm
packaging/linux/rpm/: postinstall.sh  postuninstall.sh  preinstall.sh  preuninstall.sh  {PROJECT_NAME}.spec
packaging/macos/dmg/: create-dmg.sh
packaging/macos/pkg/: Distribution.xml  PackageInfo.xml
packaging/macos/pkg/scripts/: postinstall
packaging/windows/msi/: installer.wxs
packaging/windows/nsis/: installer.nsi
project/: FEATURE_AUDIT.md  FEATURE_LICENSING.md  IMPLEMENTATION_SUMMARY.md  PRODUCTION_PROGRESS.md  PRODUCTION_READINESS_PLAN.md  PRODUCTION_STATUS.md  PROGRESS_REPORT.md  PROJECT_STATUS.md  README.md  ROADMAP_CHECKLIST.md  TECHNICAL_DEBT.md
scripts/: build-linux.sh  build-macos.sh  build-windows.bat  create-release-packages.sh  run-memory-tests.sh  run-performance-tests.sh  validate-production-readiness.sh
src/: main.cpp
src/core/: tftp_connection.cpp  tftp_packet.cpp  tftp_server.cpp
src/core/config/: parser.cpp
src/core/tftp/: connection.cpp  monitoring.cpp  packet.cpp  server.cpp
src/core/utils/: logger.cpp
src/examples/: CMakeLists.txt
src/production/security/: manager.cpp
src/simple-tftpd/config/: parser.cpp
src/simple-tftpd/core/: connection.cpp  monitoring.cpp  packet.cpp  server.cpp
src/simple-tftpd/utils/: logger.cpp
src/tests/: CMakeLists.txt  test_main.cpp
src/tests/integration/: integration_tests.cpp  performance_tests.cpp  tftp_client.cpp  tftp_client.hpp
src/tests/unit/: config_tests.cpp  connection_tests.cpp  monitoring_tests.cpp  packet_tests.cpp  security_tests.cpp
src/tests/utils/: test_helpers.cpp  test_helpers.hpp
src/utils/: config_parser.cpp  logger.cpp
